Blender crash when renaming bone in outliner (weight paint mode) #39383

Closed
opened 2014-03-24 10:12:14 +01:00 by Bob · 6 comments

W7 Geforce 9800 GT

https://www.dropbox.com/s/mh1agtxur3oggn2/Kiki-Clone_RENAMEBUG.blend

press CTRL+click on clavicle.L (DO NOT SELECT) and rename it to anything else. It will crash Blender.

I assume because normally you would click the bone first,and then it will force you in pose mode where the issue is non-existant.

W7 Geforce 9800 GT https://www.dropbox.com/s/mh1agtxur3oggn2/Kiki-Clone_RENAMEBUG.blend press CTRL+click on clavicle.L (DO NOT SELECT) and rename it to anything else. It will crash Blender. I assume because normally you would click the bone first,and then it will force you in pose mode where the issue is non-existant.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Bollebib

Added subscriber: @Bollebib
Bastien Montagne self-assigned this 2014-03-24 11:58:04 +01:00

This issue was referenced by blender/blender-addons-contrib@07578bed4d

This issue was referenced by blender/blender-addons-contrib@07578bed4dec4a63e904fe3f20ca2107a76021fe

This issue was referenced by 07578bed4d

This issue was referenced by 07578bed4dec4a63e904fe3f20ca2107a76021fe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 07578bed4d.

Closed by commit 07578bed4d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39383
No description provided.